--- a/k_means_implementation.ipynb
+++ b/k_means_implementation.ipynb
@@ -722,20 +722,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "02c5be9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 1, 3, 3, 0, 1, 1, 2, 1, 0, 1, 3, 1, 3, 0, 3, 2, 1, 1, 3, 0,\n",
-       "       2, 1, 1, 1, 2, 0, 0, 2, 2, 2, 3, 0, 2, 2, 1, 1, 0, 0, 0, 0, 1, 1,\n",
-       "       0, 2, 1, 2, 1, 1, 2, 0, 2, 0, 1, 2, 1, 2, 3, 0, 1, 3, 3, 1, 2, 3,\n",
-       "       0, 2, 0, 2, 0, 0, 1, 3, 1, 0, 0, 1, 2], dtype=int64)"
+       "array([0, 1, 1, 1, 1, 3, 0, 1, 0, 1, 3, 0, 1, 1, 1, 3, 1, 2, 1, 1, 1, 3,\n",
+       "       0, 0, 1, 1, 0, 3, 3, 0, 0, 0, 1, 3, 2, 0, 1, 1, 3, 3, 3, 3, 1, 1,\n",
+       "       3, 0, 1, 0, 1, 0, 0, 3, 0, 3, 1, 0, 1, 0, 1, 3, 1, 1, 1, 1, 0, 1,\n",
+       "       3, 0, 3, 0, 3, 3, 1, 1, 1, 3, 3, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
     "data = df_preprocessed.drop(\"country\", axis=\"columns\").to_numpy()\n",
     "\n",
     "# Instantiate model object with hyperparameters\n",
-    "kmeans = KMeans(n_clusters=4, max_iter=300, tol=0.001)\n",
+    "kmeans = KMeans(n_clusters=4, max_iter=1000, tol=0.1)\n",
     "\n",
     "# Do fit and predict cluster labels\n",
     "result, final_wcss = kmeans.fit_predict(data)\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "60d48dfb",
    "metadata": {},
    "outputs": [
@@ -762,13 +762,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: ['Austria', 'Belgium', 'Canada', 'Denmark', 'France', 'Germany', 'Iceland', 'Ireland', 'Israel', 'Italy', 'Japan', 'Luxembourg', 'Netherlands', 'Norway', 'Portugal', 'Singapore', 'Spain', 'Sweden', 'Switzerland', 'United Kingdom', 'United States of America']\n",
+      "0: ['Afghanistan', 'Azerbaijan', 'Bangladesh', 'Bolivia', 'Djibouti', 'Dominican Republic', 'Ethiopia', 'Ghana', 'Guatemala', 'Honduras', 'Indonesia', 'Madagascar', 'Mauritania', 'Morocco', 'Nepal', 'Nigeria', 'Pakistan', 'Philippines', 'Senegal', 'South Africa', 'Sudan', 'Uzbekistan', 'Zambia']\n",
       "\n",
-      "1: ['Albania', 'Algeria', 'Azerbaijan', 'Bahrain', 'Belarus', 'Bolivia', 'Brazil', 'Colombia', 'Costa Rica', 'Dominican Republic', 'Ecuador', 'Egypt', 'Iran', 'Iraq', 'Kazakhstan', 'Kuwait', 'Malaysia', 'Mexico', 'Morocco', 'Oman', 'Panama', 'Qatar', 'Saudi Arabia', 'Turkey', 'United Arab Emirates', 'Uzbekistan']\n",
+      "1: ['Albania', 'Algeria', 'Argentina', 'Armenia', 'Bahrain', 'Belarus', 'Bosnia and Herzegovina', 'Brazil', 'Bulgaria', 'Chile', 'Colombia', 'Costa Rica', 'Croatia', 'Ecuador', 'Egypt', 'Hungary', 'Iran', 'Iraq', 'Kazakhstan', 'Kuwait', 'Malaysia', 'Mexico', 'Oman', 'Panama', 'Poland', 'Qatar', 'Romania', 'Russia', 'Saudi Arabia', 'Serbia', 'Turkey', 'Ukraine', 'United Arab Emirates']\n",
       "\n",
-      "2: ['Afghanistan', 'Bangladesh', 'China', 'Djibouti', 'Ethiopia', 'Ghana', 'Guatemala', 'Honduras', 'India', 'Indonesia', 'Madagascar', 'Mauritania', 'Nepal', 'Nigeria', 'Pakistan', 'Philippines', 'Senegal', 'South Africa', 'Sudan', 'Zambia']\n",
+      "2: ['China', 'India']\n",
       "\n",
-      "3: ['Argentina', 'Armenia', 'Bosnia and Herzegovina', 'Bulgaria', 'Chile', 'Croatia', 'Hungary', 'Poland', 'Romania', 'Russia', 'Serbia', 'Ukraine']\n",
+      "3: ['Austria', 'Belgium', 'Canada', 'Denmark', 'France', 'Germany', 'Iceland', 'Ireland', 'Israel', 'Italy', 'Japan', 'Luxembourg', 'Netherlands', 'Norway', 'Portugal', 'Singapore', 'Spain', 'Sweden', 'Switzerland', 'United Kingdom', 'United States of America']\n",
       "\n"
      ]
     }
